1) change 'Driver driver = (Driver)Class.forName(driverClassName).newInstance();' to 'Driver driver = (Driver)Class.forName(driverClassName).getDeclaredConstructor().newInstance();' ;